--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.539.0",
     "next": "^15.4.6",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "resend": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
@@ -27,6 +28,4 @@
     "typescript": "^5.2.2"
   }
 }
-
-
 
